# ForgeFIX

./: .drone.yml  .gitignore  .gitmodules  Cargo.toml  README.md  fix_client.c  run.sh  run_c.sh
forgefix/: Cargo.toml  LICENSE
forgefix-at/: Cargo.toml
forgefix-at/src/: main.rs
forgefix-c/: Cargo.toml  build.rs  fix.h  fix_client.c  fix_fields.h
forgefix-c-at/: Cargo.toml  build.rs
forgefix-c-at/src/: main.rs
forgefix-c/src/: lib.rs
forgefix/executor/: Makefile  executor  qf.ini
forgefix/spec/: FIX42.xml  fields.xslt  generate.sh
forgefix/src/: fix.rs  lib.rs
forgefix/src/fix/: checksum.rs  decode.rs  encode.rs  log.rs  mem.rs  resend.rs  session.rs  sqlite_store.rs  stopwatch.rs  store.rs  stream.rs  validate.rs  vec_store.rs
forgefix/src/fix/fields/: generated.rs  mod.rs
test/: test.sh
