[package]
name = "forgefix"
version = "0.1.0"
edition = "2021"
description = "ForgeFIX is an opinionated FIX 4.2 client library for the buy-side written in Rust. ForgeFIX is optimized for the subset of the FIX protocol used by buy-side firms connecting to brokers and exchanges for communicating orders and fills."
license = "MIT OR Apache-2.0"

[workspace]
members = ["forgefix", "forgefix-at", "forgefix-c"]
resolver = "2"

