[package]
name = "forgefix-c-at"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
forgefix-c = { path = "../forgefix-c" }

[build-dependencies]
cc = "1.0"
