[package]
name = "forgefix-c"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
forgefix = { path = "../forgefix", version = "0.2.0" }
tokio = { version = "1.29.1", features = ["net", "macros", "rt", "rt-multi-thread", "io-util", "time", "fs"] }

[build-dependencies]
cbindgen = "0.24"

[lib] 
crate-type = ["cdylib"]

