[package]
name = "forgefix"
version = "0.1.2"
edition = "2021"
description = "ForgeFIX is an opinionated FIX 4.2 client library for the buy-side written in Rust. ForgeFIX is optimized for the subset of the FIX protocol used by buy-side firms connecting to brokers and exchanges for communicating orders and fills."
license-file = "LICENSE"
repository = "https://github.com/ForgeFinx/ForgeFIX/"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
chrono = "0.4.26"
lazy_static = "1.4.0"
regex = "1.9.1"
rusqlite = { version = "0.28.0", features = ["chrono"] }
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["net", "macros", "rt", "rt-multi-thread", "io-util", "time", "fs"] }
tokio-rusqlite = "0.3.0"

